Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47835

Clipboard broken on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.1, 5.12.2
    • 5.5.0
    • QPA
    • None
    • Build - Qt 5.5 on a Windows 10 pc. Latest stable sdk/ndk (as of 19/08/2015)
      Deployed on:
      Google Nexus 5 running Android 5.1.1
      Other Android device running 4.2.1
    • Android
    • 4aac07d0237cd4895f670ae2df6a8844ab91b699 (qt/qtbase/5.12)

    Description

      The clipboard does not work on Android, reproducible on several devices using a small standalone example (attached).

      When retrieving stored QMimeData, the formats() always comes back as "text/plain", regardless of what or how many types were in the QMimeData used in the call to QApplication::clipboard()->setMimeData.

      Attachments

        For Gerrit Dashboard: QTBUG-47835
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            aelm Andrew Forrest
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes